uploaded config files
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@28513 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/professorenkatalog-base-webapp/documentation/installation.html
+++ b/professorenkatalog-base-webapp/documentation/installation.html
@@ -8,6 +8,7 @@
 <body>
 <h1>Installation der Anwendung &quot;Professorenkatalog&quot;</h1>
 
+
  <h2>Buildfiles anpassen</h2>
 	<ul>	
 		<li><code>profkatsample-webapp/pom.xml</code></li>
@@ -21,7 +22,7 @@
  </ul>
  
 
-<h3>Postgres Datenbank einrichten</h3>
+<h2>Postgres Datenbank einrichten</h2>
 In Postgres können wir eine DB für alle MyCoRe Instanzen verwenden. Die eigentlichen Datenbanken können in Schemas abgelegt werden.
 
 <h4>Konfiguration mittels pgadmin3 – GUI</h4>
@@ -47,7 +48,16 @@ In Postgres können wir eine DB für alle MyCoRe Instanzen verwenden. Die eigent
 	   
 	</ul>
 
+<h2>Webseite anpassen</h2>
+<ul><li>Stripes Layout: <code>/WEB-INF/layout/default.jsp</code> anpassen</ul>
 
+<h2>Anwendung bauen</h2>
+<ul>
+	<li><code>jspdocportal-webapp</code></li>
+	<li><code>professorenkatalog-base-webapp</code></li>
+	<li><code>profkatsample-webapp</code></li>
+	<li><code>profkatsample-complete</code></li>
+</ul>
 
 <div style="min-height:128px;">&nbsp;</div>
 </body>
