--- a/professorenkatalog-base-webapp/src/main/config/lang/webcontent/index_introtext.html
+++ b/professorenkatalog-base-webapp/src/main/config/lang/webcontent/index_introtext.html
@@ -1,5 +1,9 @@
+
+<div style="float:right;padding-left:24px"><img border="0" src="images/akten.jpg" alt="" /></div>
+<div>
 <p>
-Das ist eine Demoanwendung für einen Professorenkatalog.
-Der Code soll als Beispiel für das Aufsetzen eigener Professorenkatalogsanwendungen dienen.
+Das ist eine Demoanwendung fÃ¼r einen Professorenkatalog.
+Der Code und die Konfigurationsdateien soll als Beispiel fÃ¼r das Aufsetzen eigener Professorenkatalogsanwendungen dienen.
 </p>
-<div style="float:right"><img border="0" align="right" src="images/akten.jpg" alt="" /></div>
+</div>
+
