default static webtexts
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@28547 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/professorenkatalog-base-webapp/documentation/installation.html
+++ b/professorenkatalog-base-webapp/documentation/installation.html
@@ -137,6 +137,13 @@ Im Verzeichnis <code>/profkatsample-complete</code> ausführen:
 		<li>ant create.workflow.database</li>
 		<li>ant deploy.workflow.processdefinitions</li>
 	</ul>
+<div style="min-height:128px;">&nbsp;</div>
+
+
+<h1>Migration des RostockerProfessorenkatalogs</h1>
+Wegen der Umstrukturierung des Codes (Extrahieren generischer Bestandteile) sind folgende Anpassungen am Rostocker 
+Professorenkatalog (CPR) vorzunehmen:
+<ul><li>Umbenennung der Klassifikationen (IDs)</li></ul>
 
 
 <div style="min-height:128px;">&nbsp;</div>
