--- a/professorenkatalog-base-module/src/main/config/lang/webcontent/browsenode.html
+++ b/professorenkatalog-base-module/src/main/config/lang/webcontent/browsenode.html
@@ -2,4 +2,4 @@ Tausende von Dokumenten &ndash; und st&auml;ndig werden es mehr.... <br />
 <br />
 Dabei die &Uuml;bersicht zu behalten f&auml;llt schwer. Eine Hilfe bieten Klassifikationssysteme. Dokumente k&ouml;nnen verschiedenen Klassifikationen zugeordnet werden. <br />
 <br />
-Durch das Browsen in einer Klassifikation ist eine&nbsp; hierarchisch strukturierte, thematische Suche von Dokumenten nach definierten Ordnungskriterien m&ouml;glich.
+Durch das Browsen in einer Klassifikation ist eine hierarchisch strukturierte, thematische Suche von Dokumenten nach definierten Ordnungskriterien m&ouml;glich.
