--- a/profkat-sample-webapp/documentation/profkat_developer.html
+++ b/profkat-sample-webapp/documentation/profkat_developer.html
@@ -21,7 +21,7 @@
 	<li>Elemente <span class="variable">artifactID, name, description</span></li>
 </ul>
 <h3>Mycore-Properties</h3>
-/src/main/config/mycore.properties
+<code>/src/main/config/mycore.properties</code>
 <ul><li>oberer Block</li></ul>
 <div class="textfile">
 MCR.datadir=/opt/profkat/data
@@ -33,16 +33,16 @@ log4j.rootLogger=INFO, stdout, R
 </div>	
 
 <h3>Hibernate Konfiguration</h3>
-/src/main/config/hibernate/hibernate.cfg.xml
+<code>/src/main/config/hibernate/hibernate.cfg.xml</code>
 <ul><li>Datenbankparameter</li></ul>
 
 <h3>Activiti Workflowengine Konfiguration</h3>
-src/main/resources/config/worfklow/activiti.cfg.xml
+<code>src/main/resources/config/worfklow/activiti.cfg.xml</code>
 <ul><li>Datenbankparameter und Email </li></ul>
 
 <h3>Sprachdateien</h3>
-src\main\config\lang\messages_de.properties<br />
-src\main\config\lang\messages_en.properties
+<code>src\main\config\lang\messages_de.properties<br />
+src\main\config\lang\messages_en.properties</code>
 <ul><li>diverse Properties</li></ul>
 
 </body>
