--- a/profkat-sample-webapp/documentation/profkat_install.html
+++ b/profkat-sample-webapp/documentation/profkat_install.html
@@ -36,10 +36,12 @@ Lege folgende Datenbanken und Schemata an (am Beispiel von PostreSQL):
 </ul>
 
 <h2>SOLR-Installation</h2>
-<big>SPÄTER ....(nach unten verschieben!)</big><br />
-Die MyCoRe-Community stellt ein vorkonfiguriertes <code>SOLR.war</code> bereit, welches
+<big>(SPÄTER ....nach unten verschieben!)</big><br />
+<p>SOLR sollte eine eigene Tomcat-Instanz spendiert werden, die unter einem eigenen Port 
+(Empfehlung: <code>8980</code> in <code>server.xml</code> konfigurieren) läuft.</p>
+<p>Die MyCoRe-Community stellt ein vorkonfiguriertes <code>SOLR.war</code> bereit, welches
 wir für den Professorenkatalog nutzen ...
-<a href="http://www.mycore.de/documentation/search/solr.html">siehe Anleitung in der MyCoRe Doku</a>
+<a href="http://www.mycore.de/documentation/search/solr.html">siehe Anleitung in der MyCoRe Doku</a></p>
 
 <ul class="commandline">
 	<li>sudo mkdir /opt/solr</li>
@@ -77,7 +79,7 @@ wir für den Professorenkatalog nutzen ...
 	<li>cd profkat-sample-webapp</li>
 	<li>ant update.solr.conf</li>
 </ul>
-Verbindung testen: <a href="http://localhost:8080/solr">http://localhost:8080/solr</a>
+Verbindung testen: <a href="http://localhost:8980/solr">http://localhost:8980/solr</a>
 
 
 <h2>Activiti-Workflowengine Installation</h2>
@@ -136,13 +138,19 @@ siehe <a href="profkat_developer.html#config_files">Profkat-Developer-Dokumentat
 </ul>
 
 <h3>Initialisierung der Anwendung</h3>
-Anlegen der Arbeitsverzeichnisse, Laden der Nutzer, Erstellen der Klassifikationen
+Anlegen der der Nutzer, Erstellen der Workflow, Klassifikationen
 <ul class="commandline">
 	<li>cd /opt/profkat/projects/profkat-sample-webapp</li>
-	<li>sudo -u tomcat7 ant update.solr.config</li>
+	<li>sudo -u tomcat7 ant create.users</li> 
+	<li>sudo -u tomcat7 ant create.class</li>
+	<li>sudo -u tomcat7 ant deploy.workflows</li>
 </ul>
 
-<h2>Start der Kommandozeile</h2>
+<h2>Start der MyCoRe-Kommandozeile</h2>
+<ul class="commandline">
+	<li>cd /opt/profkat/projects/profkat-sample-webapp/target/app</li>
+	<li>sudo -u tomcat7 java -jar -Xmx128m -jar profkat-sample-cli.jar</li>
+</ul>
 
 <h2>Deployen der Webanwendung</h2>
 
