rename box.state/state -> box.status/status
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@31005 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-sample-webapp/documentation/profkat_developer.html
+++ b/profkat-sample-webapp/documentation/profkat_developer.html
@@ -45,5 +45,13 @@ log4j.rootLogger=INFO, stdout, R
 src\main\config\lang\messages_en.properties</code>
 <ul><li>diverse Properties</li></ul>
 
+<h2>Migration Altdaten CPR</h2>
+<ul>
+	<li>Epochen reinrödeln</li>
+	<li>Umbenennung <tt>/box.state/state</tt> &rarr; <tt>box.status/status</tt></li>
+	<li>Neue Status-Klassifikation im <tt>&lt;service&gt;</tt> / <tt>servstate</tt>
+	<li>Umbenennung der KlassifikationsIDs</li>
+	
+</ul>
 </body>
 </html>
