reimplemented feedback form
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@31056 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-sample-webapp/documentation/profkat_developer.html
+++ b/profkat-sample-webapp/documentation/profkat_developer.html
@@ -31,7 +31,7 @@ MCR.Module-solr.ServerURL=http://localhost:8080/solr/profkat
 log4j.rootLogger=INFO, stdout, R
 ...
 </div>	
-
+<ul><li>unterer Block (Email für Feedback-Formular)</li></ul>
 <h3>Hibernate Konfiguration</h3>
 <code>/src/main/config/hibernate/hibernate.cfg.xml</code>
 <ul><li>Datenbankparameter</li></ul>
@@ -51,6 +51,7 @@ src\main\config\lang\messages_en.properties</code>
 	<li>Umbenennung <tt>/box.state/state</tt> &rarr; <tt>box.status/status</tt></li>
 	<li>Neue Status-Klassifikation im <tt>&lt;service&gt;</tt> / <tt>servstate</tt>
 	<li>Umbenennung der KlassifikationsIDs</li>
+	<li>ServiceFlags: <tt>createdBy, modifiedBy</tt></li>
 	
 </ul>
 </body>
