more todos for migration
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@31167 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-sample-webapp/documentation/profkat_developer.html
+++ b/profkat-sample-webapp/documentation/profkat_developer.html
@@ -52,7 +52,8 @@ src\main\config\lang\messages_en.properties</code>
 	<li>Neue Status-Klassifikation im <tt>&lt;service&gt;</tt> / <tt>servstate</tt>
 	<li>Umbenennung der KlassifikationsIDs</li>
 	<li>ServiceFlags: <tt>createdBy, modifiedBy</tt></li>
-	
+	<li>Language-Attribute in MCRMetaHistoryDate und MCRMetaHistoryEvent entfernen</li>
+	<li>leere Derivate Label auf "default" setzen</li>	
 </ul>
 </body>
 </html>
