--- a/profkat-sample-webapp/documentation/profkat_developer.html
+++ b/profkat-sample-webapp/documentation/profkat_developer.html
@@ -53,7 +53,9 @@ src\main\config\lang\messages_en.properties</code>
 	<li>Umbenennung der KlassifikationsIDs</li>
 	<li>ServiceFlags: <tt>createdBy, modifiedBy</tt></li>
 	<li>Language-Attribute in MCRMetaHistoryDate und MCRMetaHistoryEvent entfernen</li>
-	<li>leere Derivate Label auf "default" setzen</li>	
+	<li>leere Derivate Label auf "default" setzen</li>
+	<li>Vererbungsattribute: notinherit=true / heritable="false"</li>
+	<li>Institution mit &lt;time&gt; / &lt;text&gt;</li>	
 </ul>
 </body>
 </html>
