--- a/profkat-sample-webapp/documentation/profkat_install.html
+++ b/profkat-sample-webapp/documentation/profkat_install.html
@@ -70,7 +70,7 @@ wir für den Professorenkatalog nutzen ...
     &lt;cores adminPath="/admin/cores" shareSchema="true"&gt;
         &lt;core name="profkat" instanceDir="./cores/profkat" 
               dataDir="./../../data/profkat" /&gt;
-    &lt;/core&gt;
+    &lt;/cores&gt;
 &lt;/solr&gt;
 </div>
 
