more documentation on how to install
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@31717 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-sample-webapp/documentation/profkat_developer.html
+++ b/profkat-sample-webapp/documentation/profkat_developer.html
@@ -56,6 +56,7 @@ src\main\config\lang\messages_en.properties</code>
 	<li>leere Derivate Label auf "default" setzen</li>
 	<li>Vererbungsattribute: notinherit=true / heritable="false"</li>
 	<li>Institution mit &lt;time&gt; / &lt;text&gt;</li>	
+	<li>MCRMetaHistoryEvent : Language-Attribut bei Klassifikationen löschen ()classification/@xml:lang) </li> 
 </ul>
 </body>
 </html>
