--- a/profkat-base-module/src/main/resources/config/webcontent/browsenode.html
+++ b/profkat-base-module/src/main/resources/config/webcontent/browsenode.html
@@ -1,5 +1,7 @@
-Tausende von Dokumenten &ndash; und st&auml;ndig werden es mehr.... <br />
+Tausende von Dokumenten ... und ständig werden es mehr.... <br />
 <br />
-Dabei die &Uuml;bersicht zu behalten f&auml;llt schwer. Eine Hilfe bieten Klassifikationssysteme. Dokumente k&ouml;nnen verschiedenen Klassifikationen zugeordnet werden. <br />
+Dabei die Übersicht zu behalten fällt schwer. Eine Hilfe bieten Klassifikationssysteme. 
+Dokumente können verschiedenen Klassifikationen zugeordnet werden. <br />
 <br />
-Durch das Browsen in einer Klassifikation ist eine hierarchisch strukturierte, thematische Suche von Dokumenten nach definierten Ordnungskriterien m&ouml;glich.
+Durch das Browsen in einer Klassifikation ist eine hierarchisch strukturierte, 
+thematische Suche von Dokumenten nach definierten Ordnungskriterien möglich.
