--- a/profkat-sample-webapp/documentation/profkat_developer.html
+++ b/profkat-sample-webapp/documentation/profkat_developer.html
@@ -47,16 +47,16 @@ src\main\config\lang\messages_en.properties</code>
 
 <h2>Migration Altdaten CPR</h2>
 <ul>
-	<li>Epochen reinrödeln</li>
-	<li>Umbenennung <tt>/box.state/state</tt> &rarr; <tt>box.status/status</tt></li>
-	<li>Neue Status-Klassifikation im <tt>&lt;service&gt;</tt> / <tt>servstate</tt>
-	<li>Umbenennung der KlassifikationsIDs</li>
-	<li>ServiceFlags: <tt>createdBy, modifiedBy</tt></li>
-	<li>Language-Attribute in MCRMetaHistoryDate und MCRMetaHistoryEvent entfernen</li>
-	<li>leere Derivate Label auf "default" setzen</li>
+	<li>CHECK: Epochen reinrödeln</li>
+	<li>CHECK: Umbenennung <tt>/box.state/state</tt> &rarr; <tt>box.status/status</tt></li>
+	<li>CHECK: Neue Status-Klassifikation im <tt>&lt;service&gt;</tt> / <tt>servstate</tt>
+	<li>CHECK: Umbenennung der KlassifikationsIDs</li>
+	<li>CHECK: MCRMetaHistoryEvent : Language-Attribut bei Klassifikationen löschen (classification/@xml:lang) </li> 
+	<li>CHECK: ServiceFlags: <tt>createdBy, modifiedBy</tt></li>
+	<li>CHECK (nur im Editor?): Language-Attribute in MCRMetaHistoryDate und MCRMetaHistoryEvent entfernen</li>
+	<li>CHECK: leere Derivate Label auf "default" setzen</li>
 	<li>Vererbungsattribute: notinherit=true / heritable="false"</li>
 	<li>Institution mit &lt;time&gt; / &lt;text&gt;</li>	
-	<li>MCRMetaHistoryEvent : Language-Attribut bei Klassifikationen löschen ()classification/@xml:lang) </li> 
 </ul>
 </body>
 </html>
