update pom.xml and build.xml
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@33750 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-sample-webapp/documentation/upgrade_20151101.html
+++ b/profkat-sample-webapp/documentation/upgrade_20151101.html
@@ -51,6 +51,9 @@
 	</li>
 	
 </ul>
+
+<h2><code>build.xml</code></h2>
+<ul><li>Basis aus <code>profkat-sample</code> übernehmen und neu gem. Anleitung anpassen</ul>
 	
 
 <h2>Start der MyCoRe-Kommandozeile</h2>
