update install guide
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@34258 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-sample/documentation/profkat_install.html
+++ b/profkat-sample/documentation/profkat_install.html
@@ -149,6 +149,13 @@ wir für den Professorenkatalog nutzen ...
 	<li>PostgresDB (mit Schema) konfigurieren</li> 
 </ul>
 
+<h3>Hibernate-Konfiguration anpassen</h3>
+<ul>
+	<li>c:\Users\$USER\AppData\Local\MyCoRe\profkat-sample\hibernate.cfg.xml</li>
+	<li>\home\tomcat7\.mycore\profkat-sample\hibernate.cfg.xml</li>
+	<li>PostgresDB (mit Schema) konfigurieren</li> 
+</ul>
+
 <h3>Anlegen der der Nutzer, Erstellen der Workflow, Klassifikationen</h3>
 <ul class="commandline">
 	<li>cd /opt/profkat/projects/profkat-sample-webapp</li>
