--- a/profkat-sample/documentation/upgrade_20151101.html
+++ b/profkat-sample/documentation/upgrade_20151101.html
@@ -65,5 +65,10 @@
 
 <h2>Deployen der Webanwendung</h2>
 
+<h1>Anpassungen an MyCoRe LTS 2016.06</h1>
+<ul>
+	<li>Parameter für Workspace: showWorkspace.action?mcr_base=cpr_person
+</ul>
+
 </body>
 </html>
